chore: use OpenRewrite to migrate to Java 17
Used the `org.openrewrite.maven:rewrite-maven-plugin:6.27.0`
Maven plugin with the `org.openrewrite.recipe:rewrite-migrate-java:3.25.0`
plugin and the `org.openrewrite.java.migrate.UpgradeToJava17` recipe.