@@ -75,7 +75,7 @@ public abstract class AbstractOtpOperator implements OtpOperator
                     value = OTPPamUtil.composePamData( otpUserRecord );
                     break;
                 default:
-                    final String errorStr = String.format( "Unsupported storage format: %s", format.toString() );
+                    final String errorStr = "Unsupported storage format: %s".formatted( format.toString() );
                     final ErrorInformation error = new ErrorInformation( PwmError.ERROR_INVALID_CONFIG, errorStr );
                     throw new PwmUnrecoverableException( error );
             }
@@ -129,7 +129,7 @@ public abstract class AbstractOtpOperator implements OtpOperator
         }
         OTPUserRecord otpconfig = null;
         /* Try format by format */
-        LOGGER.trace( () -> String.format( "detecting format from value: %s", value ) );
+        LOGGER.trace( () -> "detecting format from value: %s".formatted( value ) );
         /* - PWM JSON */
         try
         {
